# SignalScribe

./: .cursorignore  .gitignore  .pre-commit-config.yaml  README.md  colors.yaml  install.sh  notes.txt  pyproject.toml  requirements.txt  setup.py  signalscribe.py  tox.ini  transcriber.py
SignalScribe/: __init__.py  __main__.py  app.py  colors.py  decoder.py  defaults.py  hfilesize.py  logging.py  loggingconsole.py  model.py  modelutils.py  output.py  sdrtrunk.py  trackedqueue.py  transcriber.py  transcription.py  utils.py  version.py  watcher.py
